--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "next": "^12.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0-beta.4"
